--- a/package.json
+++ b/package.json
@@ -31,13 +31,17 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/mapped-types": "*",
-    "@nestjs/mongoose": "^8.0.0",
     "@nestjs/passport": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@typegoose/typegoose": "^8.1.1",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "joi": "^17.4.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "mongoose": "^5.13.5",
+    "nestjs-typegoose": "^7.1.38",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -53,7 +57,9 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
     "@types/joi": "^17.2.3",
+    "@types/lodash": "^4.14.172",
     "@types/moment": "^2.13.0",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
