--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/serve-static": "^2.2.2",
     "@typegoose/typegoose": "^8.1.1",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
-    "joi": "^17.4.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "mongoose": "^5.13.5",
@@ -56,7 +56,6 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
-    "@types/joi": "^17.2.3",
     "@types/lodash": "^4.14.172",
     "@types/moment": "^2.13.0",
     "@types/mongoose": "^5.11.97",
