--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nestjs/passport": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/serve-static": "^2.2.2",
+    "@nestjs/swagger": "^5.0.9",
     "@typegoose/typegoose": "^8.1.1",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
@@ -48,6 +49,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.1.6",
     "validator": "^13.6.0"
   },
   "devDependencies": {
