Change product type  name to category

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -44,6 +44,8 @@ spec:
               value: "true"
             - name: PRODUCTS_SEEDER
               value: "true"
+            - name: CATEGORY_SEEDER
+              value: "true"  
       imagePullSecrets:
         - name: github-pull-secret 
   
