--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "mongoose": "^5.13.5",
+    "mongoose-autopopulate": "^0.14.0",
     "nestjs-typegoose": "^7.1.38",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
