--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,14 @@
-NODE_ENV = development
-MONGO_URL = mongodb://localhost:27017:cafeteria
 PORT = 3000
+NODE_ENV = development
+
+MONGO_INITDB_ROOT_PASSWORD = Aa@123456
+MONGO_INITDB_DATABASE = otsv_coffee
+MONGO_URL = mongodb://localhost:27017/otsv_coffee
+
+REDIS_HOST = localhost
+REDIS_PORT = 6379
+REDIS_PASSWORD = your-password
+REDIS_DB = 0
 
 JWT_SECRET = secret
 JWT_ACCESS_EXPIRATION = 7
