--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@nestjs/swagger": "^5.0.9",
     "@typegoose/typegoose": "^8.1.1",
     "bcrypt": "^5.0.1",
+    "cache-manager": "^3.4.4",
+    "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "lodash": "^4.17.21",
@@ -47,6 +49,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -57,6 +60,7 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/cache-manager": "^3.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
     "@types/lodash": "^4.14.172",
