Update auth guard

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,7 @@
 PORT = 3000
 NODE_ENV = development
 
+MONGO_INITDB_ROOT_USERNAME = admin
 MONGO_INITDB_ROOT_PASSWORD = Aa@123456
 MONGO_INITDB_DATABASE = otsv_coffee
 MONGO_URL = mongodb://localhost:27017/otsv_coffee
@@ -10,9 +11,12 @@ REDIS_PORT = 6379
 REDIS_PASSWORD = your-password
 REDIS_DB = 0
 
-JWT_SECRET = secret
-JWT_ACCESS_EXPIRATION = 7
-JWT_REFRESH_EXPIRATION = 30
+JWT_ACCESS_SECRET = secret
+JWT_REFRESH_SECRET = secret
+# 7 days in seconds : 7 * 24 * 3600
+JWT_ACCESS_EXPIRATION = 604800 
+# 30 days in seconds : 30 * 24 * 3600
+JWT_REFRESH_EXPIRATION = 2592000
 
 ACCOUNTS_SEEDER = true
 PRODUCTS_SEEDER = true
