--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@types/lodash": "^4.14.172",
     "@types/moment": "^2.13.0",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
