--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "download": "^8.0.0",
+    "faker": "^5.5.3",
+    "fs-extra": "^10.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "mongoose": "^5.13.5",
